Added an about page, added an automatic year script, changed the layout of a few images in the index page.

--- a/index.html
+++ b/index.html
@@ -29,19 +29,22 @@
             <p class="side-title text-title-part-2 m-0">Portofolio</p>
             <div class="links mt-3">
               <div class="link-box">
-                <a class="d-bloc text-gold" href="#">home</a>
+                <a class="d-block text-gold sidebar-link text-gold sidebar-link" href="#">home</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="realism.html">realism</a>
+                <a class="d-block sidebar-link" href="realism.html">realism</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="illustrative.html">illustrative</a>
+                <a class="d-block sidebar-link" href="illustrative.html">illustrative</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="fineline.html">fineline</a>
+                <a class="d-block sidebar-link" href="fineline.html">fineline</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="asian.html">asian</a>
+                <a class="d-block sidebar-link" href="asian.html">asian</a>
+              </div
+              <div class="link-box">
+                <a class="d-block sidebar-link" href="about.html">about</a>
               </div>
               <div class="link-box">
                 <a class="email d-inline-block mr-2" href="mailto:gemm.belle.dc@gmail.com"><i class="far fa-envelope "></i></a>
@@ -79,7 +82,7 @@
               <img src="images/home/1.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
 
               <div class="modal fade image-modal-1" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -135,7 +138,7 @@
               <img src="images/home/2.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
 
               <div class="modal fade image-modal-2" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -186,7 +189,7 @@
               <img src="images/home/3.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
 
               <div class="modal fade image-modal-3" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -238,7 +241,7 @@
               <img src="images/home/4.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
 
               <div class="modal fade image-modal-4" tabindex="-1" role="dialog" aria-labelledby="image-modal-4" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -289,7 +292,7 @@
               <img src="images/home/5.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-5">
 
               <div class="modal fade image-modal-5" tabindex="-1" role="dialog" aria-labelledby="image-modal-5" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -327,64 +330,11 @@
             <!-- Second Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <!-- Image Modal #6-->
-              <img src="images/home/namine-1.JPEG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
-
-              <div class="modal fade image-modal-6" tabindex="-1" role="dialog" aria-labelledby="image-modal-6" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
-                  <div class="modal-body">
-                    <div class="modal-content">
-                      <div class="text-left pt-3 pr-3">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                           <span aria-hidden="true">&times;</span>
-                         </button>
-                      </div>
-                      <div class="container-fluid p-5">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <img src="images/home/namine-1.jpeg" class="img-fluid" alt="">
-                          </div>
-                          <div class="col-md-6">
-                            <h2 class="modal-title">Naminé - Kingdom Hearts</h2>
-                            <p class="modal-text">Character Drawing</p>
-                            <p class="modal-text">Dimensions: 4" x  6"</p>
-                            <p class="modal-text">Materials:</p>
-                            <ul class="modal-text">
-                              <li>
-                                Charcoal stick
-                              </li>
-                              <li>
-                                HB2 pencil
-                              </li>
-                              <li>
-                                0.7 mechanical pencil
-                              </li>
-                              <li>
-                                0.5 mechanical pencil
-                              </li>
-                              <li>
-                                shading stomp
-                              </li>
-                              <li>
-                                kneadable eraser
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-
-            </div>
-            <div class="col">
               <!-- Image Modal #7-->
               <img src="images/home/7.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-7">
 
               <div class="modal fade image-modal-7" tabindex="-1" role="dialog" aria-labelledby="image-modal-7" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -433,7 +383,7 @@
               <img src="images/home/8.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-8">
 
               <div class="modal fade image-modal-8" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -473,7 +423,7 @@
               <img src="images/home/9.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-9">
 
               <div class="modal fade image-modal-9" tabindex="-1" role="dialog" aria-labelledby="image-modal-9" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -522,7 +472,7 @@
               <img src="images/home/10.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-10">
 
               <div class="modal fade image-modal-10" tabindex="-1" role="dialog" aria-labelledby="image-modal-10" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -559,7 +509,7 @@
               <img src="images/home/13.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-13">
 
               <div class="modal fade image-modal-13" tabindex="-1" role="dialog" aria-labelledby="image-modal-13" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -615,7 +565,7 @@
               <img src="images/home/12.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-12">
 
               <div class="modal fade image-modal-12" tabindex="-1" role="dialog" aria-labelledby="image-modal-12" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -667,7 +617,7 @@
               <img src="images/home/11.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-11">
 
               <div class="modal fade image-modal-11" tabindex="-1" role="dialog" aria-labelledby="image-modal-11" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -715,11 +665,11 @@
 
             </div>
             <div class="col">
-              <!-- Image Modal #14-->
-              <img src="images/home/14.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-14">
+              <!-- Image Modal #6-->
+              <img src="images/home/namine-1.JPEG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
 
-              <div class="modal fade image-modal-14" tabindex="-1" role="dialog" aria-labelledby="image-modal-14" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+              <div class="modal fade image-modal-6" tabindex="-1" role="dialog" aria-labelledby="image-modal-6" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -730,28 +680,31 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/14.jpg" class="img-fluid" alt="">
+                            <img src="images/home/namine-1.jpeg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
-                            <h2 class="modal-title">Broken Heart</h2>
-                            <p class="modal-text">Process work</p>
-                            <p class="modal-text">Dimensions: 3.5" x  5.4"</p>
+                            <h2 class="modal-title">Naminé - Kingdom Hearts</h2>
+                            <p class="modal-text">Character Drawing</p>
+                            <p class="modal-text">Dimensions: 4" x  6"</p>
                             <p class="modal-text">Materials:</p>
                             <ul class="modal-text">
                               <li>
-                                Pigma Micron 01
+                                Charcoal stick
                               </li>
                               <li>
-                                Laurentian coloured pencils
+                                HB2 pencil
                               </li>
                               <li>
-                                Crayola coloured pencils
+                                0.7 mechanical pencil
                               </li>
                               <li>
                                 0.5 mechanical pencil
                               </li>
                               <li>
-                                eraser
+                                shading stomp
+                              </li>
+                              <li>
+                                kneadable eraser
                               </li>
                             </ul>
                           </div>
@@ -768,7 +721,7 @@
               <img src="images/home/15.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-15">
 
               <div class="modal fade image-modal-15" tabindex="-1" role="dialog" aria-labelledby="image-modal-15" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                   <div class="modal-body">
                     <div class="modal-content">
                       <div class="text-left pt-3 pr-3">
@@ -825,7 +778,7 @@
 
         <!-- Copyright -->
         <div class="container mt-3 text-center">
-          <p class="copyright">© 2020 Art Portfolio by Gemm Belle.</p>
+          <p class="copyright">©<script>document.write(new Date().getFullYear())</script> Art Portfolio by Gemm Belle.</p>
         </div>
 
     </section>
