--- a/asian.html
+++ b/asian.html
@@ -29,19 +29,22 @@
             <p class="side-title text-title-part-2 m-0">Portofolio</p>
             <div class="links mt-3">
               <div class="link-box">
-                <a class="d-block" href="index.html">home</a>
+                <a class="d-block sidebar-link" href="index.html">home</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="realism.html">realism</a>
+                <a class="d-block sidebar-link" href="realism.html">realism</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="illustrative.html">illustrative</a>
+                <a class="d-block sidebar-link" href="illustrative.html">illustrative</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="fineline.html">fineline</a>
+                <a class="d-block sidebar-link" href="fineline.html">fineline</a>
               </div>
               <div class="link-box">
-                <a class="d-block text-gold" href="#">asian</a>
+                <a class="d-block sidebar-link text-gold" href="#">asian</a>
+              </div>
+              <div class="link-box">
+                <a class="d-block sidebar-link" href="about.html">about</a>
               </div>
               <div class="link-box">
                 <a class="email d-inline-block mr-2" href="mailto:gemm.belle.dc@gmail.com"><i class="far fa-envelope "></i></a>
@@ -71,26 +74,313 @@
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images/asian/1.jpg" class="img-fluid constant-size" alt="">
+
+              <!-- Image Modal #1-->
+              <img src="images/asian/1.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
+
+              <div class="modal fade image-modal-1" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/asian/1.jpg" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Foo Dog w Skull</h2>
+                            <p class="modal-text">Ink & Pencil Drawing </p>
+                            <p class="modal-text">Dimensions: 7.7" x  10.8"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Pigma Micron 01
+                              </li>
+                              <li>
+                                Charcoal Pencil
+                              </li>
+                              <li>
+                                HB2
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                Shading Stomp
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col">
+
+              <!-- Image Modal #2-->
+              <img src="images/asian/2.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
+
+              <div class="modal fade image-modal-2" tabindex="-1" role="dialog" aria-labelledby="image-modal-2" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/asian/2.jpg" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Foo Dog w Skull</h2>
+                            <p class="modal-text">Ink & Pencil Drawing </p>
+                            <p class="modal-text">Dimensions: 7.7" x  10.8"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Pigma Micron 01
+                              </li>
+                              <li>
+                                Charcoal Pencil
+                              </li>
+                              <li>
+                                HB2
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                Shading Stomp
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col">
-              <img src="images/asian/2.jpg" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-                <img src="images/asian/3.jpg" class="img-fluid constant-size" alt="">
+
+                <!-- Image Modal #3-->
+                <img src="images/asian/3.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
+
+                <div class="modal fade image-modal-3" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
+                  <div class="modal-dialog modal-xl">
+                    <div class="modal-body">
+                      <div class="modal-content">
+                        <div class="text-left pt-3 pr-3">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                             <span aria-hidden="true">&times;</span>
+                           </button>
+                        </div>
+                        <div class="container-fluid p-5">
+                          <div class="row">
+                            <div class="col-md-6">
+                              <img src="images/asian/3.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-md-6">
+                              <h2 class="modal-title">Foo Dog w Skull</h2>
+                              <p class="modal-text">Ink & Pencil Drawing </p>
+                              <p class="modal-text">Dimensions: 7.7" x  10.8"</p>
+                              <p class="modal-text">Materials:</p>
+                              <ul class="modal-text">
+                                <li>
+                                  Pigma Micron 01
+                                </li>
+                                <li>
+                                  Charcoal Pencil
+                                </li>
+                                <li>
+                                  HB2
+                                </li>
+                                <li>
+                                  0.7 mechanical pencil
+                                </li>
+                                <li>
+                                  0.5 mechanical pencil
+                                </li>
+                                <li>
+                                  Shading Stomp
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
 
-          <!-- First Row -->
+          <!-- Second Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-                <img src="images/asian/4.jpg" class="img-fluid constant-size" alt="">
+
+                <!-- Image Modal #4-->
+                <img src="images/asian/4.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
+
+                <div class="modal fade image-modal-4" tabindex="-1" role="dialog" aria-labelledby="image-modal-4" aria-hidden="true">
+                  <div class="modal-dialog modal-xl">
+                    <div class="modal-body">
+                      <div class="modal-content">
+                        <div class="text-left pt-3 pr-3">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                             <span aria-hidden="true">&times;</span>
+                           </button>
+                        </div>
+                        <div class="container-fluid p-5">
+                          <div class="row">
+                            <div class="col-md-6">
+                              <img src="images/asian/4.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-md-6">
+                              <h2 class="modal-title">Peony (Asian Style)</h2>
+                              <p class="modal-text">Pencil Drawing </p>
+                              <p class="modal-text">Dimensions: 4.5" x  3.5"</p>
+                              <p class="modal-text">Materials:</p>
+                              <ul class="modal-text">
+                                <li>
+                                  Charcoal Stick
+                                </li>
+                                <li>
+                                  HB2 Pencil
+                                </li>
+                                <li>
+                                  0.7 mechanical pencil
+                                </li>
+                                <li>
+                                  0.5 mechanical pencil
+                                </li>
+                                <li>
+                                  Shading Stomp
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
+
             <div class="col">
-              <img src="images/asian/5.jpg" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #5-->
+              <img src="images/asian/5.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-5">
+
+              <div class="modal fade image-modal-5" tabindex="-1" role="dialog" aria-labelledby="image-modal-5" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/asian/5.jpg" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">A Crane</h2>
+                            <p class="modal-text">Ink & Pencil Drawing </p>
+                            <p class="modal-text">Dimensions: 3.4" x  4.5"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Charcoal Stick
+                              </li>
+                              <li>
+                                General's Charcoal Pencil <div id="555"></div>
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                Shading Stomp
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
+
             <div class="col">
-              <img src="images/asian/5.jpg" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #6-->
+              <img src="images/asian/6.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
+
+              <div class="modal fade image-modal-6" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/asian/6.jpg" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">A Crane</h2>
+                            <p class="modal-text">Ink & Pencil Drawing </p>
+                            <p class="modal-text">Dimensions: 3.4" x  4.5"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Charcoal Stick
+                              </li>
+                              <li>
+                                General's Charcoal Pencil <div id="555"></div>
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                Shading Stomp
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -99,7 +389,7 @@
 
         <!-- Copyright -->
         <div class="container mt-3 text-center">
-          <p class="copyright">© 2020 Art Portfolio by Gemm Belle.</p>
+          <p class="copyright">©<script>document.write(new Date().getFullYear())</script> Art Portfolio by Gemm Belle.</p>
         </div>
 
     </section>
