--- a/fineline.html
+++ b/fineline.html
@@ -29,19 +29,22 @@
             <p class="side-title text-title-part-2 m-0">Portofolio</p>
             <div class="links mt-3">
               <div class="link-box">
-                <a class="d-bloc" href="index.html">home</a>
+                <a class="d-block sidebar-link" href="index.html">home</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="realism.html">realism</a>
+                <a class="d-block sidebar-link" href="realism.html">realism</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="illustrative.html">illustrative</a>
+                <a class="d-block sidebar-link" href="illustrative.html">illustrative</a>
               </div>
               <div class="link-box">
-                <a class="d-block text-gold" href="#">fineline</a>
+                <a class="d-block sidebar-link text-gold" href="#">fineline</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="asian.html">asian</a>
+                <a class="d-block sidebar-link" href="asian.html">asian</a>
+              </div>
+              <div class="link-box">
+                <a class="d-block sidebar-link" href="about.html">about</a>
               </div>
               <div class="link-box">
                 <a class="email d-inline-block mr-2" href="mailto:gemm.belle.dc@gmail.com"><i class="far fa-envelope "></i></a>
@@ -71,32 +74,289 @@
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images/fineline/1.jpg" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #1-->
+              <img src="images/fineline/1.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
+
+              <div class="modal fade image-modal-1" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/fineline/1.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Peaceful Death</h2>
+                            <p class="modal-text">Ink Work</p>
+                            <p class="modal-text">Dimensions: 3.2" x  2.7"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Pigma Micron 01
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+
+              <!-- Image Modal #2-->
+              <img src="images/fineline/2.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
+
+              <div class="modal fade image-modal-2" tabindex="-1" role="dialog" aria-labelledby="image-modal-2" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/fineline/2.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Cherry Blossom Duo</h2>
+                            <p class="modal-text">Minimalist</p>
+                            <p class="modal-text">Dimensions: 2.2" x  2.5"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col">
+
+              <!-- Image Modal #3-->
+              <img src="images/fineline/3.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
+
+              <div class="modal fade image-modal-3" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/fineline/3.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Cherry Blossom Duo</h2>
+                            <p class="modal-text">Minimalist</p>
+                            <p class="modal-text">Dimensions: 2.2" x  2.5"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col">
-              <img src="images/fineline/2.jpg" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #4-->
+              <img src="images/fineline/4.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
+
+              <div class="modal fade image-modal-4" tabindex="-1" role="dialog" aria-labelledby="image-modal-4" aria-hidden="true">
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/fineline/4.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Minimal Peony</h2>
+                            <p class="modal-text">Floral Design</p>
+                            <p class="modal-text">Dimensions: 4.5" x  3.5"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col">
-                <img src="images/fineline/3.jpg" class="img-fluid constant-size" alt="">
             </div>
+
+
+                      <!-- Second Row -->
+                      <div class="row align-items-start my-4">
+
+
+                        <div class="col">
+
+                          <!-- Image Modal #5-->
+                          <img src="images/fineline/5.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-5">
+
+                          <div class="modal fade image-modal-5" tabindex="-1" role="dialog" aria-labelledby="image-modal-5" aria-hidden="true">
+                            <div class="modal-dialog modal-xl">
+                              <div class="modal-body">
+                                <div class="modal-content">
+                                  <div class="text-left pt-3 pr-3">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                       <span aria-hidden="true">&times;</span>
+                                     </button>
+                                  </div>
+                                  <div class="container-fluid p-5">
+                                    <div class="row">
+                                      <div class="col-md-6">
+                                        <img src="images/fineline/5.JPG" class="img-fluid" alt="">
+                                      </div>
+                                      <div class="col-md-6">
+                                        <h2 class="modal-title">Minimal Single Floral</h2>
+                                        <p class="modal-text">Floral Design</p>
+                                        <p class="modal-text">Dimensions: 2" x  1.7"</p>
+                                        <p class="modal-text">Materials:</p>
+                                        <ul class="modal-text">
+                                          <li>
+                                            0.5 mechanical pencil
+                                          </li>
+                                        </ul>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+
+                        <div class="col">
+
+                          <!-- Image Modal #6-->
+                          <img src="images/fineline/6.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
+
+                          <div class="modal fade image-modal-6" tabindex="-1" role="dialog" aria-labelledby="image-modal-6" aria-hidden="true">
+                            <div class="modal-dialog modal-xl">
+                              <div class="modal-body">
+                                <div class="modal-content">
+                                  <div class="text-left pt-3 pr-3">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                       <span aria-hidden="true">&times;</span>
+                                     </button>
+                                  </div>
+                                  <div class="container-fluid p-5">
+                                    <div class="row">
+                                      <div class="col-md-6">
+                                        <img src="images/fineline/6.JPG" class="img-fluid" alt="">
+                                      </div>
+                                      <div class="col-md-6">
+                                        <h2 class="modal-title">Minimal Single Floral</h2>
+                                        <p class="modal-text">Floral Design</p>
+                                        <p class="modal-text">Dimensions: 2" x  1.7"</p>
+                                        <p class="modal-text">Materials:</p>
+                                        <ul class="modal-text">
+                                          <li>
+                                            0.5 mechanical pencil
+                                          </li>
+                                        </ul>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+
+
+                        <div class="col">
+
+                          <!-- Image Modal #7-->
+                          <img src="images/fineline/7.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-7">
+
+                          <div class="modal fade image-modal-7" tabindex="-1" role="dialog" aria-labelledby="image-modal-7" aria-hidden="true">
+                            <div class="modal-dialog modal-xl">
+                              <div class="modal-body">
+                                <div class="modal-content">
+                                  <div class="text-left pt-3 pr-3">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                       <span aria-hidden="true">&times;</span>
+                                     </button>
+                                  </div>
+                                  <div class="container-fluid p-5">
+                                    <div class="row">
+                                      <div class="col-md-6">
+                                        <img src="images/fineline/7.JPG" class="img-fluid" alt="">
+                                      </div>
+                                      <div class="col-md-6">
+                                        <h2 class="modal-title">Not a Boquet</h2>
+                                        <p class="modal-text">Ink Work</p>
+                                        <p class="modal-text">Dimensions: 2.3" x  4.6"</p>
+                                        <p class="modal-text">Materials:</p>
+                                        <ul class="modal-text">
+                                          <li>
+                                            Pigma Micron 01
+                                          </li>
+                                        </ul>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+
+
+                        </div>
           </div>
 
-            <!-- Second Row -->
-          <div class="row align-items-start my-4">
-            <div class="col">
-                <img src="images/fineline/4.jpg" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-              <img src="images/fineline/5.jpg" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-              <img src="images/fineline/7.jpg" class="img-fluid constant-size" alt="">
-            </div>
+
 
 
         <!-- Copyright -->
         <div class="container mt-3 text-center">
-          <p class="copyright">© 2020 Art Portfolio by Gemm Belle.</p>
+          <p class="copyright">©<script>document.write(new Date().getFullYear())</script> Art Portfolio by Gemm Belle.</p>
         </div>
 
     </section>
