Fixed image type capitalization on photos.

--- a/about.html
+++ b/about.html
@@ -75,11 +75,11 @@
           <div class="col-lg-8 text-left">
             <!-- Header Component -->
             <h4 class="text-gold">About</h4>
-            <p class="sp-light-paragraph xs-text">This is probably a cliché bio, but I'm going for it anyways :P</p>
+            <p class="sp-light-paragraph xs-text pt-5">This is probably a cliché bio, but I'm going for it anyways :P</p>
 
 
           <!-- MY STORY -->
-          <h5 id="my-story" class="text-gold pt-5">MY STORY</h5>
+          <h5 id="my-story" class="text-gold">MY STORY</h5>
           <p class="light-paragraph sm-text">
             Art has always been an important aspect of my life since I was a child. It was my favourite subject throughout school, and it is still my favourite thing to do now.
             Drawing has gotten me through those boring classes and made my notebooks look 10x better than they would have if they were just plain notes. Don't worry, art never
