--- a/fineline.html
+++ b/fineline.html
@@ -75,7 +75,7 @@
           <div class="row align-items-start my-4">
             <div class="col">
               <!-- Image Modal #1-->
-              <img src="images/fineline/1.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
+              <img src="images/fineline/1.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
 
               <div class="modal fade image-modal-1" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
                 <div class="modal-dialog modal-xl">
@@ -89,7 +89,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/fineline/1.JPG" class="img-fluid" alt="">
+                            <img src="images/fineline/1.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Peaceful Death</h2>
@@ -113,7 +113,7 @@
             <div class="col">
 
               <!-- Image Modal #2-->
-              <img src="images/fineline/2.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
+              <img src="images/fineline/2.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
 
               <div class="modal fade image-modal-2" tabindex="-1" role="dialog" aria-labelledby="image-modal-2" aria-hidden="true">
                 <div class="modal-dialog modal-xl">
@@ -127,7 +127,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/fineline/2.JPG" class="img-fluid" alt="">
+                            <img src="images/fineline/2.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Cherry Blossom Duo</h2>
@@ -152,7 +152,7 @@
             <div class="col">
 
               <!-- Image Modal #3-->
-              <img src="images/fineline/3.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
+              <img src="images/fineline/3.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
 
               <div class="modal fade image-modal-3" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
                 <div class="modal-dialog modal-xl">
@@ -166,7 +166,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/fineline/3.JPG" class="img-fluid" alt="">
+                            <img src="images/fineline/3.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Cherry Blossom Duo</h2>
@@ -188,7 +188,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #4-->
-              <img src="images/fineline/4.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
+              <img src="images/fineline/4.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
 
               <div class="modal fade image-modal-4" tabindex="-1" role="dialog" aria-labelledby="image-modal-4" aria-hidden="true">
                 <div class="modal-dialog modal-xl">
@@ -202,7 +202,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/fineline/4.JPG" class="img-fluid" alt="">
+                            <img src="images/fineline/4.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Minimal Peony</h2>
@@ -232,7 +232,7 @@
                         <div class="col">
 
                           <!-- Image Modal #5-->
-                          <img src="images/fineline/5.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-5">
+                          <img src="images/fineline/5.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-5">
 
                           <div class="modal fade image-modal-5" tabindex="-1" role="dialog" aria-labelledby="image-modal-5" aria-hidden="true">
                             <div class="modal-dialog modal-xl">
@@ -246,7 +246,7 @@
                                   <div class="container-fluid p-5">
                                     <div class="row">
                                       <div class="col-md-6">
-                                        <img src="images/fineline/5.JPG" class="img-fluid" alt="">
+                                        <img src="images/fineline/5.jpg" class="img-fluid" alt="">
                                       </div>
                                       <div class="col-md-6">
                                         <h2 class="modal-title">Minimal Single Floral</h2>
@@ -271,7 +271,7 @@
                         <div class="col">
 
                           <!-- Image Modal #6-->
-                          <img src="images/fineline/6.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
+                          <img src="images/fineline/6.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
 
                           <div class="modal fade image-modal-6" tabindex="-1" role="dialog" aria-labelledby="image-modal-6" aria-hidden="true">
                             <div class="modal-dialog modal-xl">
@@ -285,7 +285,7 @@
                                   <div class="container-fluid p-5">
                                     <div class="row">
                                       <div class="col-md-6">
-                                        <img src="images/fineline/6.JPG" class="img-fluid" alt="">
+                                        <img src="images/fineline/6.jpg" class="img-fluid" alt="">
                                       </div>
                                       <div class="col-md-6">
                                         <h2 class="modal-title">Minimal Single Floral</h2>
@@ -311,7 +311,7 @@
                         <div class="col">
 
                           <!-- Image Modal #7-->
-                          <img src="images/fineline/7.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-7">
+                          <img src="images/fineline/7.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-7">
 
                           <div class="modal fade image-modal-7" tabindex="-1" role="dialog" aria-labelledby="image-modal-7" aria-hidden="true">
                             <div class="modal-dialog modal-xl">
@@ -325,7 +325,7 @@
                                   <div class="container-fluid p-5">
                                     <div class="row">
                                       <div class="col-md-6">
-                                        <img src="images/fineline/7.JPG" class="img-fluid" alt="">
+                                        <img src="images/fineline/7.jpg" class="img-fluid" alt="">
                                       </div>
                                       <div class="col-md-6">
                                         <h2 class="modal-title">Not a Boquet</h2>
