--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #6-->
-              <img src="images/home/namine-1.JPEG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
+              <img src="images/home/namine-1.jpeg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
 
               <div class="modal fade image-modal-6" tabindex="-1" role="dialog" aria-labelledby="image-modal-6" aria-hidden="true">
                 <div class="modal-dialog modal-xl">
