Fixed about page golden text.

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <p class="side-title text-title-part-2 m-0">Portofolio</p>
             <div class="links mt-3">
               <div class="link-box">
-                <a class="d-block sidebar-link text-gold" href="index.html">home</a>
+                <a class="d-block sidebar-link" href="index.html">home</a>
               </div>
               <div class="link-box">
                 <a class="d-block sidebar-link" href="realism.html">realism</a>
@@ -44,7 +44,7 @@
                 <a class="d-block sidebar-link" href="asian.html">asian</a>
               </div
               <div class="link-box">
-                <a class="d-block sidebar-link" href="about.html">about</a>
+                <a class="d-block sidebar-link text-gold" href="about.html">about</a>
               </div>
               <div class="link-box">
                 <a class="email d-inline-block mr-2" href="mailto:gemm.belle.dc@gmail.com"><i class="far fa-envelope "></i></a>
